Added first post

--- a/public/404.html
+++ b/public/404.html
@@ -6,36 +6,34 @@
   <link rel="stylesheet" href="http://localhost:1313/css/tufte.css">
 </head>
 <body>
-  <header>
+  <article>
+    <header>
   <h1>Ghassan Shahzad</h1>
   <p class="subtitle">A site for notes, essays, and wanderings</p>
 
   <nav>
     <ul style="list-style: none; padding: 0; display: flex; gap: 1rem;">
-      <li><a href="http://localhost:1313/">Home</a></li>
-      <li style="margin-top: 0"><a href="http://localhost:1313/about/">About</a></li>
+        <li><a href="http://localhost:1313/">Home</a></li>
+        <li style="margin-top: 0"><a href="http://localhost:1313/maths">Mathematics</a></li>
+        <li style="margin-top: 0"><a href="http://localhost:1313/about/">About</a></li>
+        <li style="margin-top: 0"><a href="https://github.com/ghassbomb/ghassbomb.github.io">Source</a></li> 
+        <li style="margin-top: 0"><a href="http://localhost:1313/index.xml">RSS</a> </li>
     </ul>
   </nav>
 
   <hr>
 </header>
 
-  <article>
     
 
 <p>Error: page not found.</p>
 
 
-  </article>
-  <hr>
+    <hr>
 <footer>
   <p>© 2025 Ghassan Shahzad</p>
-  <p>
-    <a href="https://github.com/ghassbomb/ghassbomb.github.io">Source</a> · 
-    <a href="http://localhost:1313/index.xml">RSS</a> · 
-    <a href="http://localhost:1313/about/">About</a>
-  </p>
 </footer>
 
+  </article>
 </body>
 </html>
