--- a/public/maths/tgc-game-theory/index.html
+++ b/public/maths/tgc-game-theory/index.html
@@ -64,7 +64,87 @@ a higher payoff is better than a lower one. (Colin bolded, Rose the other).</p>
   </tbody>
 </table>
 <p>A2:
-This game is an example of prisoner&rsquo;s dilemma because there is an outcome where both participants can benefit equally, and for a greater total payoff (Colin goes right, Rose goes down). However, each participant can gain a greater <em>individual</em> payoff if they go another route (at the cost of the other), which each has to account for in their decision-making. If Colin and Rose do not trust each other, their dominant strategy is to go left and up respectively – losing out on a greater total and individual payoff.</p>
+This game is an example of prisoner&rsquo;s dilemma because there is an outcome where both participants can benefit equally, and for a greater total payoff (Colin goes right, Rose goes down). However, each participant can gain a greater <em>individual</em> payoff if they go another route (at the cost of the other), which each has to account for in their decision-making. If Colin and Rose do not trust each other, therefore, their dominant strategy is to go left and up respectively – losing out on a greater total and individual payoff.</p>
+<h2 id="lecture-two">Lecture Two</h2>
+<p>Q1: Rose and Colin are playing a repeated version of the prisoner’s dilemma game. If Rose is playing tit-for-tat and Colin always defects, what will each player’s payoff be in the first round? What will their payoffs be in subsequent rounds? (Colin is bolded)</p>
+<table>
+  <thead>
+      <tr>
+          <th></th>
+          <th>Cooperate</th>
+          <th>Defect</th>
+      </tr>
+  </thead>
+  <tbody>
+      <tr>
+          <td>Cooperate</td>
+          <td>2,2</td>
+          <td>0,3</td>
+      </tr>
+      <tr>
+          <td>Defect</td>
+          <td>3,0</td>
+          <td>1,1</td>
+      </tr>
+  </tbody>
+</table>
+<p>A1: In the first round, Rose will cooperate and Colin will defect (0,3). In all subsequent rounds, they will both defect (1,1).</p>
+<p>Q2: Rose and Colin are again playing a repeated version of the same prisoner’s dilemma game. If both Rose and Colin now play tit-for-tat, what will each player’s payoff be in the first round? What will their payoffs be in subsequent rounds?</p>
+<p>A2: Both will co-operate in the first round (2,2), and co-operate in each subsequent round as well (2,2).</p>
+<h2 id="lecture-three">Lecture Three</h2>
+<p>Q1: True or false: When playing chicken, your dominant strategy is to drive straight.</p>
+<p>A1: False.</p>
+<p>Q2: Fill in the blanks in the following payoff matrix so it’s clear this is a game of chicken. Assume a higher payoff is preferred to a lower one.</p>
+<table>
+  <thead>
+      <tr>
+          <th></th>
+          <th>Straight</th>
+          <th>Swerve</th>
+      </tr>
+  </thead>
+  <tbody>
+      <tr>
+          <td>Straight</td>
+          <td>-10,-10</td>
+          <td>2,0</td>
+      </tr>
+      <tr>
+          <td>Swerve</td>
+          <td>0,2</td>
+          <td>0,0</td>
+      </tr>
+  </tbody>
+</table>
+<h2 id="lecture-four">Lecture Four</h2>
+<ol>
+<li>
+<p>This is an assurance game. There are two pure nash equilibrium outcomes (B, B and R, R) and one of these (B,B) is superior in payoff to the other (payoff dominance).</p>
+</li>
+<li>
+<table>
+  <thead>
+      <tr>
+          <th></th>
+          <th>TV</th>
+          <th>Dinner + Movie</th>
+      </tr>
+  </thead>
+  <tbody>
+      <tr>
+          <td>TV</td>
+          <td>1,1</td>
+          <td>1,0</td>
+      </tr>
+      <tr>
+          <td>Dinner + Movie</td>
+          <td>0,1</td>
+          <td>3,3</td>
+      </tr>
+  </tbody>
+</table>
+</li>
+</ol>
 
     <hr>
 <footer>
